--- a/FE/package.json
+++ b/FE/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "expo": "~54.0.25",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
